--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
   <title>Tharana hansaja Weerasinghe</title>
   <link rel="stylesheet" href="./style.css">
 
+  
+  
+  <script>
+var isNS = (navigator.appName == "Netscape") ? 1 : 0;
+if(navigator.appName == "Netscape") document.captureEvents(Event.MOUSEDOWN||Event.MOUSEUP);
+function mischandler(){
+return false;
+}
+function mousehandler(e){
+var myevent = (isNS) ? e : event;
+var eventbutton = (isNS) ? myevent.which : myevent.button;
+if((eventbutton==2)||(eventbutton==3)) return false;
+}
+document.oncontextmenu = mischandler;
+document.onmousedown = mousehandler;
+document.onmouseup = mousehandler;
+</script>
+  
+  
 </head>
 <body>
 
